--- a/Ladder/frontend/src/index.css
+++ b/Ladder/frontend/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
   margin: 0;
@@ -10,10 +12,10 @@
   list-style: none;
   text-decoration: none;
 }
-
+ 
 :root {
   --color-bg: #1f1f38; 
-  --color-bg2: #f8f8f8;
+  --color-bg2: #f4f5f7;
   --color-bg-variant: #28284f;
   --color-primary: #007bff;
   /* Blue */
@@ -45,7 +47,13 @@ body {
   line-height: 1.7;
   
 }
-
+.nameofpage {
+  font-size: 24px;
+  line-height: 28px;
+  color: var(--hub-color-black);
+  font-weight: 500;
+  margin: 16px 10px;
+}
 /* body, input, select, textarea {
   color: #777;
   font-family: "Source Sans Pro", sans-serif;
